<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_white"
    tools:context="com.gem.hxwasha.IndexActivity" >
  
	 <RadioGroup
        android:id="@+id/group_index"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"  
        android:orientation="horizontal"
        android:paddingTop="2dp"
        android:layout_alignParentBottom="true"
        >
       <!--   -->
        <RadioButton
            android:id="@+id/rb_index"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/home"
            android:text="@string/index"
            android:textColor="@color/bottom_text_color"
            android:checked="true"
            />
    	<!-- style="@style/main_tab_bottom" -->
        <RadioButton
            android:id="@+id/rb_order"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/order"
            android:text="@string/order"
            android:textColor="@color/bottom_text_color"
            />
            <!--  style="@style/main_tab_bottom" -->
        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/mine"
            android:text="@string/mine"
            android:textColor="@color/bottom_text_color"
             />
    </RadioGroup>

	<View
         android:id="@+id/view1"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:background="#dcd8d8"
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/group_index" />
	
       <android.support.v4.view.ViewPager
        android:id="@+id/index_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/group_index"
		
        />

      
</RelativeLayout>
