<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_white"
    tools:context="com.gem.hxwasha.BusinessListActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:id="@+id/rl_business_list_clothes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_business_list_clothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_list_clothes_text" />
        </RelativeLayout>
   		<View
	        android:id="@+id/v_boder_vertical1"
	        android:layout_gravity="center_vertical"
	        style="@style/vertical_line"
        />
        <RelativeLayout
            android:id="@+id/rl_business_list_luxury"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_business_list_luxury"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_list_luxury_text" />
        </RelativeLayout>
   		<View
	        android:id="@+id/v_boder_vertical2"
	        android:layout_gravity="center_vertical"
	        style="@style/vertical_line"
        />		
        <RelativeLayout
            android:id="@+id/rl_business_list_bed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_business_list_bed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_list_bed_text" />
        </RelativeLayout>
   		<View
	        android:id="@+id/v_boder_vertical3"
	        android:layout_gravity="center_vertical"
	        style="@style/vertical_line"
        />
        <RelativeLayout
            android:id="@+id/rl_business_list_washtype"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_business_list_washtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_list_washtype_text" />
        </RelativeLayout>
        
    </LinearLayout>

    <View
        android:id="@+id/v_boder"
        style="@style/little_line"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        />

<!--     <ListView
        android:id="@+id/lv_business_list_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_boder"
     	>
    </ListView> -->

    <com.gem.view.BusinessRefreshListView
        android:id="@+id/lv_business_list_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_boder"
        >
    </com.gem.view.BusinessRefreshListView>

</RelativeLayout>